fix: serch dropdown top align

--- a/frappe/public/css/desk-rtl.css
+++ b/frappe/public/css/desk-rtl.css
@@ -135,3 +135,7 @@ g.chart-legend {
 .datepicker {
   right: unset !important;
 }
+
+.awesomplete>ul {
+  top: 2.5em;
+}
